# outparse

./: LICENSE  README.md  pyproject.toml
outparse/: __init__.py  parser.py
