[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "outparse"
version = "1.0.1"
description = "OutParse — configurable fast printout/text table parser"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "edmynay"}
]
requires-python = ">=3.8"
keywords = ["cli output", "printout", "text table", "parser"]


classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/edmynay/outparse"
Repository = "https://github.com/edmynay/outparse"
Issues = "https://github.com/edmynay/outparse/issues"
Documentation = "https://github.com/edmynay/outparse#readme"

[tool.setuptools.packages.find]
include = ["outparse*"]